Abbreviate project name, truncate issue title in issue scroll header and break-word issue title in issue page

--- a/pesticide_frontend/src/App.css
+++ b/pesticide_frontend/src/App.css
@@ -1260,6 +1260,7 @@ header.MuiAppBar-positionAbsolute {
   margin-bottom: 10px;
   min-width: 340px;
   font-weight: 600;
+  word-wrap: break-word;
 }
 
 @media screen and (min-width: 800px) {
